# kube-eng

./: .gitignore  CLAUDE.md  Makefile  README.md  cluster.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml
ansible/: grafana_postinstall.yml  keycloak_postinstall.yml
helm/kube-eng-kc/: Chart.yaml  values.yaml
helm/kube-eng-kc/templates/: NOTES.txt  deployment.yaml  service.yaml
helm/kube-eng-kc/templates/tests/: test-connection.yaml
helm/kube-eng-pg/: Chart.yaml  values.yaml
helm/kube-eng-pg/templates/: deployment.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
helm/mrmat-grafana/: Chart.yaml  values.yaml
helm/mrmat-keycloak/templates/: NOTES.txt  deployment.yaml  httproute.yaml  serviceaccount.yaml
helm/mrmat-keycloak/templates/tests/: test-connection.yaml
helm/mrmat-kiali/: Chart.yaml  test.yaml  values.yaml
helm/mrmat-kiali/templates/: NOTES.txt  httproute.yaml
helm/mrmat-kiali/templates/tests/: test-connection.yaml
helm/mrmat-prometheus/: Chart.yaml  values.yaml
helm/mrmat-prometheus/templates/: NOTES.txt  httproute.yaml
helm/mrmat-prometheus/templates/tests/: test-connection.yaml
infrastructure/mrmat-grafana/: values.yaml
infrastructure/mrmat-grafana/templates/: NOTES.txt  httproute.yaml
infrastructure/mrmat-grafana/templates/tests/: test-connection.yaml
infrastructure/mrmat-keycloak/: Chart.yaml  values.yaml
infrastructure/mrmat-keycloak/templates/: NOTES.txt  deployment.yaml  service.yaml
infrastructure/mrmat-kiali/: values.yaml
infrastructure/mrmat-kiali/templates/: NOTES.txt  default-instance.yaml  httproute.yaml
infrastructure/mrmat-prometheus/templates/: httproute.yaml
infrastructure/mrmat-prometheus/templates/tests/: test-connection.yaml
src/ansible/kube_eng/: README.md  galaxy.yml
src/ansible/kube_eng/playbooks/: create_cluster.yml  create_host_infra.yml  create_services.yml  create_stack.yml  destroy_cluster.yml  kube-eng-grafana-postinstall.yml  kube-eng-grafana-preinstall.yml  kube-eng-keycloak-preinstall.yml  kube-eng-registry.yml  preheat.yml  preheat_registry.yml  start_host_infra.yml  stop_host_infra.yml
src/helm/kube-eng-alloy/: values.yaml
src/helm/kube-eng-alloy/templates/: route.yaml
src/helm/kube-eng-cert-manager/: values.yaml
src/helm/kube-eng-cert-manager/templates/: NOTES.txt
src/helm/kube-eng-edge/: values.yaml
src/helm/kube-eng-edge/templates/: NOTES.txt  istio-gateway-api-experimental.yaml  istio-gateway-api.yaml  istio.yaml  traefik.yaml
src/helm/kube-eng-grafana/: Chart.yaml  values.yaml
src/helm/kube-eng-grafana/templates/: NOTES.txt  _helpers.tpl  edge-ingress.yaml  edge-istio-gateway-api.yaml  edge-istio.yaml  httproute.yaml  ingress.yaml  route.yaml
src/helm/kube-eng-jaeger/: Chart.yaml  values.yaml
src/helm/kube-eng-jaeger-v2/: Chart.yaml  values.yaml
src/helm/kube-eng-jaeger/templates/: NOTES.txt  edge-ingress.yaml  edge-istio.yaml  httproute.yaml  ingress.yaml  jaeger.yaml  route.yaml
src/helm/kube-eng-keycloak/: Chart.yaml  values.yaml
src/helm/kube-eng-keycloak-operator/: Chart.yaml  values.yaml
src/helm/kube-eng-keycloak-operator/templates/: deployment.yaml  sa.yaml  svc.yaml
src/helm/kube-eng-keycloak/templates/: NOTES.txt  deployment.yaml  edge-ingress.yaml  edge-istio-gateway-api.yaml  edge-istio.yaml  httproute.yaml  ingress.yaml  keycloak.yaml  (+3 more)
src/helm/kube-eng-kiali/: Chart.yaml  values.yaml
src/helm/kube-eng-loki/: values.yaml
src/helm/kube-eng-minio-operator/: Chart.yaml  values.yaml
src/helm/kube-eng-minio-tenant/: Chart.yaml  values.yaml
src/helm/kube-eng-postgres/: Chart.yaml  values.yaml
src/helm/kube-eng-prometheus/: Chart.yaml  values.yaml
src/helm/kube-eng-stack/: Chart.yaml  values.yaml
src/kube_eng/: __init__.py
src/kube_eng/cli/: main.py
src/kube_eng/common/: __init__.py  ansible_execution.py
src/kube_eng/config/: __init__.py  cluster_config.py  config.py  host_config.py  root_config.py  stack_config.py
src/kube_eng/tui/: ansible_tab.py  config_tab.py  dashboard_tab.py  main.py  status_tab.py  tui.tcss  validators.py
tests/: test_config.py
var/: cluster_test.json  gateway-api-edge.yaml  keycloak-admin-api.paw  kind-betty.yaml
var/ansible/: kube-eng-kiali-preinstall.yml
var/debug/: debug-pod.yaml
var/helm/kube-eng-grafana/: values.yaml
var/helm/kube-eng-keycloak/: values.yaml
var/helm/kube-eng-postgres/: values.yaml
var/helm/kube-eng-prometheus/: values.yaml
(+297 files in other folders)
