[build-system]
requires = [
    'setuptools==80.9.0',
    'build==1.3.0',
    'wheel==0.45.1'
]
build-backend = 'setuptools.build_meta'

[project]
name = "kube-eng"
description = "A local Kubernetes cluster suitable for local engineering"
urls = { "Sources" = "https://github.com/MrMatAP/kube-eng" }
keywords = ["experimental"]
readme = "README.md"
license = "MIT"
authors = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
maintainers = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "ansible==13.1.0",
    "ansible-runner>=2.4.2",
    "kubernetes>=34.1.0",
    "pydantic==2.12.5",
    "pyrefly>=0.45.2",
    "requests>=2.32.5",
    "textual>=6.7.0",
]
[dependency-groups]
dev = [
    "build==1.3.0",
    "pytest==9.0.2",
    "setuptools==80.9.0",
    "wheel==0.45.1",
    "ruff>=0.14.1",
    "pyrefly>=0.45.2",
]

[tool.setuptools.dynamic]
version = { attr = "ci.version" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["ci"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.yml", "*.yaml", ".j2", "*.md", "inventory", "*.json", ".helmignore", "*.lock", "*.tpl", "*.txt", "*.tcss"]

[project.scripts]
kube-eng = "kube_eng.cli.main:run"
kube-eng-tui = "kube_eng.tui.main:run"

# If you are debugging your tests using PyCharm then comment out the coverage options
# in addopts
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=kube_eng --cov-branch --cov-report=term --cov-report=xml:build/coverage.xml --junit-xml=build/junit.xml"
testpaths = ["tests"]
junit_family = "xunit2"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
asyncio_default_fixture_loop_scope='session'

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "single"
